--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -87,7 +87,7 @@ dans leur utilisation avec logstash.}
 Attention ces informations sont pour le moment, \date{Jeudi 16 Avril}, correctes 
 mais sont amenées à changer, notamment concernant les outputs.
 
-Chaque plugin utilise input un \gls{thread}, cela permet d'éviter les engorgements si  
+Chaque plugin input utilise un \gls{thread}, cela permet d'éviter les engorgements si  
 certaines entrées sont plus longues à traiter que d'autres.
 
 En le bloc filtre entier n'utilise par défaut qu'un seul thread, mais il est possible 
