--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -27,10 +27,16 @@ décision en temps réelle à l'analyse de code source. Et à l'heure actuelle, 
 un enjeu économique majeur (mais pas seulement \ldots). Enfin l'un des principaux 
 atouts d'Elasticsearch réside dans son aptitude à pouvoir passer à l'échelle simplement.
 
+\footnotesize{\emph{Attention, ce chapitre ne sera qu'une présentation très succinte des possibilités 
+du logiciel Elasticsearch, tout détailler nécessiterait \emph{sans doutes} des milliers
+de pages, le résumé officiel\footnote{Elasticsearch : The Definitive Guide, disponible 
+chez Pearson et Github https://github.com/elastic/elasticsearch-definitive-guide}
+en fait déjà \emph{plus de 950} \ldots}}
+
 \section{Installation}
 Avant même de regarder les différentes dépendances nécessaires à l'utilisation de
 Elasticsearch il est recommandé de vérifier que l'on utilise bien la même version
-que son compère logstash (vérifier la compatibilité dans la documentation si les
+que son compère Logstash (vérifier la compatibilité dans la documentation si les
 versions de Logstash et Elasticsearch ont un numéro différent).
 
 Son installation est sensiblement la même que son comparse logstash puisque ce logiciel 
