--- a/rapport/kibana.tex
+++ b/rapport/kibana.tex
@@ -1,3 +1,8 @@
+\begin{figure}[H]
+\center
+\includegraphics[scale=1]{kibana.png}
+\label{fig:kibana.png}
+\end{figure}
 \section{Qu'est ce que Kibana}
 
 
