--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -414,8 +414,15 @@ GET /_search?size=5&from=10
 \end{lstlisting}
 
 
-\subsubsection{SearchLite}
+\subsubsection{Search Lite}
+Comme expliqué avant il existe deux forme d'API de recherche. L'API lite avec requête
+en chaine de caractères \textit{(string query)} et l'API \textit{"full body request",
+qui nécessite comme corps de la requête, du JSON.
+
+
+
 
 \subsubsection{Full-Body Search et QueryDSL}
 
-\section{Le mapping}
+\section{Le mapping et l'analyse}
+
