correction erreur elastic

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -416,7 +416,7 @@ GET /_search?size=5&from=10
 
 \subsubsection{Search Lite}
 Comme expliqué avant il existe deux forme d'API de recherche. L'API lite avec requête
-en chaine de caractères \textit{(string query)} et l'API \textit{"full body request",
+en chaine de caractères \textit{(string query)} et l'API \textit{"full body request"},
 qui nécessite comme corps de la requête, du JSON.
 
 
